# scip-callgraph

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  METRICS_PIPELINE.md  QUICKSTART_INTERACTIVE.sh  README.md  build_rustdoc_json.rs  call_graph_with_syn_v0.rs  call_graph_with_syn_v1.rs  call_graph_with_syn_v2.rs  compare_analysis.rs  ecosystem.config.cjs  parse_rustdoc_deps.rs  pyproject.toml  rust_analyzer_ex1.rs  rust_analyzer_ex2.rs  rust_analyzer_ex3.rs
.github/workflows/: build.yml  deploy-pages.yml  generate-callgraph.yml  generate-lean-callgraph.yml  release.yml
crates/metrics-cli/: Cargo.toml
crates/metrics-cli/src/: lib.rs
crates/scip-core/: Cargo.toml
crates/scip-core/src/: atoms_to_d3.rs  call_graph.rs  call_graph_svg.rs  export_d3.rs  export_dot.rs  lib.rs  parser.rs  scip_call_graph.rs  scip_to_call_graph_json.rs  scip_utils.rs  types.rs
crates/verus-metrics/: Cargo.toml
crates/verus-metrics/src/: lib.rs  spec_halstead.rs
data/csv/: curve25519_functions.csv  functions_to_track.csv  functions_to_track_COMPLETE.csv
data/for_find_dalek_called_by_signal_script/: README.md
data/plots/: ANALYSIS_SUMMARY.md
docs/: CORRELATION_ANALYSIS_FINDINGS.md
docs/archive/: FILTERS_PRE_REFACTOR.md  QUERY_ARCHITECTURE_PROPOSAL.md
docs/guides/: CALLGRAPH_CI_INTEGRATION.md  INTERACTIVE_VIEWER.md  VSCODE_EXTENSION.md
docs/slides/: callgraph-reusable-workflow.md
examples/: detect_unused_specs_example.sh
graphs/: call_graph.dot  cargo_modules_graph.dot  cargo_modules_graph_no_core.dot  compress.dot  dependency-graph.dot  endo_flow_callees.dot  identity.dot  identity6.dot  identity7.dot  libsignal_cg.dot  libsignal_group_cipher.dot  libsignal_group_cipher_sender_key.dot  libsignal_group_decrypt.dot  libsignal_sender_keys.dot  minivec.dot  montgomery.dot  montgomery7.dot  montgomery_mul3.dot  montgomery_mul5.dot  montgomery_mul7.dot  montgomery_mul_filtered11.dot  montgomery_mul_filtered3.dot  montgomery_mul_filtered4.dot  montgomery_mul_filtered5.dot  montgomery_mul_filtered7.dot  mul_internal.dot  proto_atoms.dot  proto_call_graph.dot  protocol.dot  quick_sort.dot  quicksort_rust.dot  reduce1.dot  reduce3.dot  sorting.dot  sorting_1_05.dot  sorting_rs.dot  zkendo.dot
release/: README_RELEASE.md
scripts/: add_verification_status.py  enrich_graph_with_similar_lemmas.py  find_dalek_called_by_signal.py  visualize_metrics.py
src/: helper.rs  lib.rs  main.rs  scip_call_graph.rs  scip_reader.rs  scip_to_call_graph_json.rs  scip_utils.rs
web/: .env.example  .gitignore  ARCHITECTURE.md  FILTERS.md  QUERY_PIPELINE.md  README.md  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.js  vite.config.vscode.js
web/dist-vscode/: index.html
web/dist-vscode/assets/: main.css  main.js
web/docs/technical/: CALL_GRAPH_ALGORITHM.md  CRATE_MAP_ALGORITHM.md  FILE_MAP_ALGORITHM.md
web/proxy/: anthropic-worker.js  openrouter-worker.js  openrouter-wrangler.toml
web/public/: README.md  curve_from_rust_atomizer.json  graph.json  graph_etm_libsignal.json  graph_etm_projected.json  graph_etm_projected_focus.json
web/src/: blueprint.ts  crate-map.ts  filters.test.ts  filters.ts  graph-loader.ts  graph-utils.ts  graph.ts  main.ts  query.integration.test.ts  query.test.ts  query.ts  status.ts  types.ts  vite-env.d.ts
web/src/ai/: chat-engine.ts  chat-ui.ts  context.ts  prompts.ts  static-analysis.ts  tools.ts  types.ts
web/src/ai/providers/: anthropic.ts  openai.ts  openrouter.ts  vscode.ts
