[package]
name = "rust-analyzer-test"
version = "0.1.0"
edition = "2021"
description = "Function subgraph analyzer for Rust codebases using SCIP data"
repository = "https://github.com/Beneficial-AI-Foundation/rust-analyzer-test"
license = "MIT OR Apache-2.0"
keywords = ["rust", "analyzer", "call-graph", "scip", "visualization"]
categories = ["development-tools", "visualization"]

[dependencies]
regex = "1.10.3"
rustdoc-json = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit", "parsing"] }
petgraph = "0.6"
quote = "1.0"
prettyplease = "0.2.31"
scip = "0.5.2"
prost = "0.13.5"
protobuf = "4.31.0-beta1"
html-escape = "0.2.13"
quick-xml = "0.31"

[dev-dependencies]
tempfile = "3.5.0"

[[bin]]
name = "generate_function_subgraph_dot"
path = "src/bin/generate_function_subgraph_dot.rs"

[[bin]]
name = "generate_call_graph_dot"
path = "src/bin/generate_call_graph_dot.rs"

[[bin]]
name = "generate_files_subgraph_dot"
path = "src/bin/generate_files_subgraph_dot.rs"

[[bin]]
name = "stats_unit_graph"
path = "stats_unit_graph.rs"

[[bin]]
name = "generate_dot_from_unit_graph"
path = "generate_dot_from_unit_graph.rs"