[package]
name = "scip-callgraph"
version = "3.0.4"
edition = "2021"
description = "Call graph generator and visualizer for Rust projects using rust-analyzer and SCIP"
repository = "https://github.com/Beneficial-AI-Foundation/scip-callgraph"
license = "MIT OR Apache-2.0"
keywords = ["rust", "analyzer", "call-graph", "scip", "visualization"]
categories = ["development-tools", "visualization"]

[dependencies]
regex = "1.10.3"
rustdoc-json = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit", "parsing"] }
petgraph = "0.6"
quote = "1.0"
prettyplease = "0.2.31"
scip = "0.5.2"
prost = "0.13.5"
protobuf = "4.31.0-beta1"
html-escape = "0.2.13"
quick-xml = "0.31"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.5.0"

# Main command-line tools
[[bin]]
name = "generate_function_subgraph_dot"
path = "src/bin/generate_function_subgraph_dot.rs"

[[bin]]
name = "generate_call_graph_dot"
path = "src/bin/generate_call_graph_dot.rs"

[[bin]]
name = "generate_files_subgraph_dot"
path = "src/bin/generate_files_subgraph_dot.rs"