[workspace]
resolver = "2"
members = [
    "crates/scip-core",
    "crates/verus-metrics", 
    "crates/metrics-cli",
]
exclude = [
    "external/verus_lemma_finder/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Beneficial-AI-Foundation/scip-callgraph"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing
regex = "1.10.3"
syn = { version = "2.0", features = ["full", "visit", "parsing"] }
verus_syn = { version = "0.0.0-2025-11-16-0050", features = ["full", "visit", "parsing"] }
quote = "1.0"
prettyplease = "0.2.31"

# SCIP
scip = "0.5.2"
prost = "0.13.5"
protobuf = "4.31.0-beta1"

# Graph
petgraph = "0.6"

# Output formats
html-escape = "0.2.13"
quick-xml = "0.31"
csv = "1.3"

# CLI
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# File system
walkdir = "2.4"

# Interval trees (for line span lookup)
rust-lapper = "1.1"

# Process execution
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# External crates from GitHub
scip-atoms = { git = "https://github.com/Beneficial-AI-Foundation/scip-atoms", tag = "v0.1.0" }
