[project]
name = "scip-callgraph-scripts"
version = "0.1.0"
description = "Python scripts for scip-callgraph: graph enrichment, visualization, and analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
# For graph enrichment with similar lemmas
enrich = [
    "verus-lemma-finder",
]

# For metrics visualization
viz = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "numpy>=1.24",
]

# All optional dependencies
all = [
    "scip-callgraph-scripts[enrich,viz]",
]

dev = [
    "scip-callgraph-scripts[all]",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
# Use submodule (preferred for self-contained builds)
verus-lemma-finder = { path = "external/verus_lemma_finder", editable = true }
# Alternative: use sibling directory (for development)
# verus-lemma-finder = { path = "../verus_lemma_finder", editable = true }
# Alternative: install from GitHub
# verus-lemma-finder = { git = "https://github.com/Beneficial-AI-Foundation/verus_lemma_finder.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

