[package]
name = "scip-core"
version = "0.1.0"
edition = "2021"
description = "Core SCIP parsing and call graph generation library"
license = "MIT OR Apache-2.0"

[dependencies]
scip-atoms = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
scip = { workspace = true }
prost = { workspace = true }
html-escape = { workspace = true }
quick-xml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
